Fix blurry image

--- a/styles.css
+++ b/styles.css
@@ -253,9 +253,7 @@ a {
 }
 
 #tabimage {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+    max-width: calc(100vw - 5rem);
 }
 
 #tabimage:hover {
